--- a/Main/Main.vcxproj.filters
+++ b/Main/Main.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="ListaJugador.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="GetId.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ClasePrueba.h">
@@ -66,6 +69,9 @@
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
     <ClInclude Include="ListaJugador.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="GetId.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
   </ItemGroup>
